# dockerizeme

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: main.py  main_db.py
