[tool.poetry]
name = "docker-training"
version = "0.1.0"
description = ""
authors = ["Andres Garcia <jose.andres.gm29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
pymongo = "^4.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
